chore(package): rename packages and update imports to reflect new namespace

--- a/libs/landing/src/lib/understanding-the-landing-library.mdx
+++ b/libs/landing/src/lib/understanding-the-landing-library.mdx
@@ -8,7 +8,7 @@ import { FeaturesSection } from './components/features-section/';
 
 # Understanding the Landing Library
 
-The `landing` library is a collection of React components specifically designed for creating engaging and informative landing pages within the **React Weapons of Choice (RWOC)** monorepo. These components are styled with **Tailwind CSS** and **shadcn/ui** to ensure a consistent, cohesive, and accessible design.
+The `landing` library is a collection of React components specifically designed for creating engaging and informative landing pages within the **React Weapons of Choice (erisfy)** monorepo. These components are styled with **Tailwind CSS** and **shadcn/ui** to ensure a consistent, cohesive, and accessible design.
 
 > **Why Use a Landing Library?**  
 > A well-crafted landing page serves as the first impression for many potential users. It should quickly and clearly communicate your project's value proposition, benefits, and calls-to-action (CTAs). By using pre-built, flexible components, you can focus on fine-tuning your message rather than spending time on layout and design basics.
