--- a/libs/shadcnui/src/components/ui/understanding-the-shadcnui-library.mdx
+++ b/libs/shadcnui/src/components/ui/understanding-the-shadcnui-library.mdx
@@ -49,7 +49,7 @@ To use the components from `shadcn/ui`, simply import them into your React proje
 
 ```tsx
 import React, { FC } from 'react';
-import { Button } from '@rwoc/shadcnui';
+import { Button } from '@erisfy/shadcnui';
 
 const App: FC = () => {
   return (
